--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,9 @@
   </head>
   <body>
   <div class="container">
+      <h1>Salary Prediction Using Regression Techniques</h1>
+  </br>
+       <h6>created by :shubham mishra</h6>
   <form action="/predict" value =0 method='post' class="form-group">
 
   </br>
